--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
@@ -373,8 +373,8 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Courses</p>
                     <h5 class="font-weight-bolder mb-0">
-                      {{ courses.count|add:Feed.count }}                      {{ course_items.count }}
-                      <span class="text-success text-sm font-weight-bolder">+5</span>
+                       {{ course_items| length }}
+                      <span class="text-success text-sm font-weight-bolder">received responses</span>
                     </h5>
                   </div>
                 </div>
@@ -396,7 +396,7 @@
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Instructors</p>
                     <h5 class="font-weight-bolder mb-0">
                       {{instructors.count}}
-                      <span class="text-success text-sm font-weight-bolder">+3</span>
+                      <span class="text-success text-sm font-weight-bolder">received responses</span>
                     </h5>
                   </div>
                 </div>
@@ -418,7 +418,7 @@
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Facilities</p>
                     <h5 class="font-weight-bolder mb-0">
                       {{facilities.count}}
-                      <span class="text-danger text-sm font-weight-bolder">+2</span>
+                      <span class="text-success text-sm font-weight-bolder">received responses</span>
                     </h5>
                   </div>
                 </div>
@@ -440,7 +440,7 @@
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Students</p>
                     <h5 class="font-weight-bolder mb-0">
                       {{studentDetails.count}}
-                      <span class="text-success text-sm font-weight-bolder">+5</span>
+                      <span class="text-success text-sm font-weight-bolder">received responses</span>
                     </h5>
                   </div>
                 </div>
@@ -464,7 +464,6 @@
                 </div>
               </div>
               <h6 class="ms-2 mt-4 mb-0"> Active Students </h6>
-              <p class="text-sm ms-2"> (<span class="font-weight-bolder">{% widthratio studentDetails.count 100 1 %}%</span>) than last week </p>
               <div class="container border-radius-lg">
                 <div class="row">
                   <div class="col-3 py-3 ps-0">
@@ -494,8 +493,8 @@
                     </div>
                     <h4 class="font-weight-bolder">{{studentDetails.count}}</h4>
                     <div class="progress w-75">
-                      <div class="progress-bar bg-dark w-60" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                        aria-valuemax="100"></div>
+                      <div class="progress-bar bg-dark w-60" role="progressbar" aria-valuenow="{{studentDetails.count}}" aria-valuemin="0"
+                        aria-valuemax="1000"></div>
                     </div>
                   </div>
 
@@ -528,11 +527,7 @@
               <div class="row">
                 <div class="col-lg-6 col-7">
                   <h6>Students</h6>
-                  <p class="text-sm mb-0">
-                    <i class="fa fa-check text-info" aria-hidden="true"></i>
-                    this month
-                  </p>
-                </div>
+                                  </div>
                 <div class="col-lg-6 col-5 my-auto text-end">
                   <div class="dropdown float-lg-end pe-4">
                     <a class="cursor-pointer" id="dropdownTable" data-bs-toggle="dropdown" aria-expanded="false">
