--- a/Recess_Project_Template/src/our_app/website/templates/instructor.html
+++ b/Recess_Project_Template/src/our_app/website/templates/instructor.html
@@ -35,6 +35,45 @@
         }
     </style>
 
+      <style>
+    /* Style for star icons */
+    .rating {
+      unicode-bidi: bidi-override;
+      direction: rtl;
+      display: inline-block;
+      position: relative;
+    }
+
+    .rating input {
+      display: none;
+    }
+
+    .rating label {
+      color: #ccc;
+      font-size: 30px;
+      padding: 0 2px;
+      cursor: pointer;
+    }
+
+    .rating label:before {
+      content: "\2605";
+    }
+
+    .rating input:checked~label:before,
+    .rating label:hover~label:before {
+      content: "\2605";
+      color: #ffdd00;
+    }
+    .form-group input{
+  padding: 18px 25px;
+    border-radius: 30px;
+    border: 1px solid #F4EEFB;
+    margin-bottom: 25px;
+    width: 100%;
+    transition: all 0.3s ease-out 0s;
+}
+  </style>
+
 
 </head>
 
@@ -87,13 +126,14 @@
                                 <li class="nav-item">
                                     <a class="page-scroll" href="{% url 'course'%}">course</a>
                                 </li>
+                                 <li class="nav-item">
+                                    <a class="page-scroll" href="{% url 'instructor' %}">instructor</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="page-scroll " href="{% url 'facility' %}">facility</a>
                                 </li>
 
-                                <li class="nav-item">
-                                    <a class="page-scroll" href="{% url 'instructor' %}">instructor</a>
-                                </li>
+                               
                             </ul>
 
                         </div> <!-- navbar collapse -->
@@ -116,8 +156,7 @@
                         <div class="page-breadcrumb">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item" aria-current="page"><a
-                                            href="javascript:void(0)">Home</a></li>
+                                    <li class="breadcrumb-item" aria-current="page"><a href="{% url 'home'%}">Feedback Collection System | Makerere University</a></li>
 
                                 </ol>
                             </nav>
@@ -139,103 +178,117 @@
                         <div class="row">
               <div class="col-xl-10 col-lg-8 mx-auto">
                 <div class="section-title1  mb-50">
-                  <h2 class="wow fadeInDown text-center" data-wow-delay=".2s" style="color: #333">Hello! As a student,
+                  <h2 class="wow fadeInDown text-center" data-wow-delay=".2s" style="color: #333">Fill here,
                   </h2>
                   <br>
-                  <h5 class="wow fadeInDown">It's your right to evaluate your instructor in different aspects, so kindly
-                    take some little time to fill the form below, which is intended to provide us with feedback about
-                    your instructor of your choice according to the given fields.</h5>
-                  <p class="wow fadeInDown" data-wow-delay=".4s" style="color: #333">
-                    In doing this, it will help the institution to improve teaching and learning. Your response will be
-                    treated with utmost confidentiality. Respond without bias. Thank you.
-                  </p>
+                  
                 </div>
               </div>
             </div>
 
 
-                        <form method="post" class="needs-validation" novalidate>
-                            {% csrf_token %}
+                       <form method="post" class="needs-validation" novalidate>
+    {% csrf_token %}
 
-                            <div class="form-group">
-                                <label for="{{ form.instructorName.id_for_label }}">Instructor Name<span
-                                        style="color: red;">*</span>:</label>
-                                {{ form.instructorName }}
-                                <div class="invalid-feedback">Please provide the instructor's name.</div>
-                            </div>
+    <div class="form-group">
+        <input type="text" name="{{ form.instructorName.name }}" id="{{ form.instructorName.auto_id }}" class="form-control rounded" placeholder="Instructor Name*" required />
+        <div class="invalid-feedback">Please provide the instructor's name.</div>
+    </div>
 
-                            <div class="form-group">
-                                <label for="{{ form.department.id_for_label }}">Department<span
-                                        style="color: red;">*</span>:</label>
-                                {{ form.department }}
-                                <div class="invalid-feedback">Please provide the department name.</div>
-                            </div>
+    <div class="form-group">
+        <input type="text" name="{{ form.department.name }}" id="{{ form.department.auto_id }}" class="form-control rounded" placeholder="Department*" required />
+        <div class="invalid-feedback">Please provide the department name.</div>
+    </div>
 
-                            <div class="form-group">
-                                <label for="{{ form.courseUnit.id_for_label }}">Course Unit<span
-                                        style="color: red;">*</span>:</label>
-                                {{ form.courseUnit }}
-                                <div class="invalid-feedback">Please provide the course unit.</div>
-                            </div>
+    <div class="form-group">
+        <input type="text" name="{{ form.courseUnit.name }}" id="{{ form.courseUnit.auto_id }}" class="form-control rounded" placeholder="Course Unit*" required />
+        <div class="invalid-feedback">Please provide the course unit.</div>
+    </div>
 
-                            <span class="wow fadeInDown" style="color: #333;"><b>HOW WOULD YOU RATE YOUR INSTRUCTOR IN
-                                    THE FOLLOWING FIELDS?</b></span>
+    <span class="wow fadeInDown" style="color: #333;"><b>HOW WOULD YOU RATE YOUR INSTRUCTOR IN THE FOLLOWING FIELDS?</b></span>
 
-                            <!-- Knowledge -->
-                            <div class="form-group">
-                                <label for="{{ form.knowledge.id_for_label }}" class="d-block"><b>Knowledge</b><span
-                                        style="color: red;">*</span>:</label>
-                                <div class="form-check form-check-inline justify-content-between gap">
-                                    {{ form.knowledge }}
-                                </div>
-                                <div class="invalid-feedback">Please rate the instructor's knowledge.</div>
-                            </div>
+    <!-- Knowledge -->
+    <div class="form-group">
+        <div class="rating">
+            <input type="radio" id="star5_knowledge" name="{{ form.knowledge.name }}" value="5" required />
+            <label for="star5_knowledge"></label>
+            <input type="radio" id="star4_knowledge" name="{{ form.knowledge.name }}" value="4" />
+            <label for="star4_knowledge"></label>
+            <input type="radio" id="star3_knowledge" name="{{ form.knowledge.name }}" value="3" />
+            <label for="star3_knowledge"></label>
+            <input type="radio" id="star2_knowledge" name="{{ form.knowledge.name }}" value="2" />
+            <label for="star2_knowledge"></label>
+            <input type="radio" id="star1_knowledge" name="{{ form.knowledge.name }}" value="1" />
+            <label for="star1_knowledge"></label>
+        </div>
+        <div class="invalid-feedback">Please rate the instructor's knowledge.</div>
+    </div>
 
-                            <!-- Communication -->
-                            <div class="form-group">
-                                <label for="{{ form.communication.id_for_label }}"
-                                    class="d-block"><b>Communication</b><span style="color: red;">*</span>:</label>
-                                <div class="form-check form-check-inline justify-content-between gap">
-                                    {{ form.communication }}
-                                </div>
-                                <div class="invalid-feedback">Please rate the instructor's communication.</div>
-                            </div>
+    <!-- Communication -->
+    <div class="form-group">
+        <div class="rating">
+            <input type="radio" id="star5_communication" name="{{ form.communication.name }}" value="5" required />
+            <label for="star5_communication"></label>
+            <input type="radio" id="star4_communication" name="{{ form.communication.name }}" value="4" />
+            <label for="star4_communication"></label>
+            <input type="radio" id="star3_communication" name="{{ form.communication.name }}" value="3" />
+            <label for="star3_communication"></label>
+            <input type="radio" id="star2_communication" name="{{ form.communication.name }}" value="2" />
+            <label for="star2_communication"></label>
+            <input type="radio" id="star1_communication" name="{{ form.communication.name }}" value="1" />
+            <label for="star1_communication"></label>
+        </div>
+        <div class="invalid-feedback">Please rate the instructor's communication.</div>
+    </div>
 
-                            <!-- Teaching Style -->
-                            <div class="form-group">
-                                <label for="{{ form.teachingStyle.id_for_label }}" class="d-block"><b>Teaching
-                                        Style</b><span style="color: red;">*</span>:</label>
-                                <div class="form-check form-check-inline justify-content-between gap">
-                                    {{ form.teachingStyle }}
-                                </div>
-                                <div class="invalid-feedback">Please rate the instructor's teaching style.</div>
-                            </div>
+    <!-- Teaching Style -->
+    <div class="form-group">
+        <div class="rating">
+            <input type="radio" id="star5_teachingStyle" name="{{ form.teachingStyle.name }}" value="5" required />
+            <label for="star5_teachingStyle"></label>
+            <input type="radio" id="star4_teachingStyle" name="{{ form.teachingStyle.name }}" value="4" />
+            <label for="star4_teachingStyle"></label>
+            <input type="radio" id="star3_teachingStyle" name="{{ form.teachingStyle.name }}" value="3" />
+            <label for="star3_teachingStyle"></label>
+            <input type="radio" id="star2_teachingStyle" name="{{ form.teachingStyle.name }}" value="2" />
+            <label for="star2_teachingStyle"></label>
+            <input type="radio" id="star1_teachingStyle" name="{{ form.teachingStyle.name }}" value="1" />
+            <label for="star1_teachingStyle"></label>
+        </div>
+        <div class="invalid-feedback">Please rate the instructor's teaching style.</div>
+    </div>
 
-                            <!-- Responsiveness -->
-                            <div class="form-group">
-                                <label for="{{ form.responsiveness.id_for_label }}"
-                                    class="d-block"><b>Responsiveness</b><span style="color: red;">*</span>:</label>
-                                <div class="form-check form-check-inline justify-content-between gap">
-                                    {{ form.responsiveness }}
-                                </div>
-                                <div class="invalid-feedback">Please rate the instructor's responsiveness.</div>
-                            </div>
+    <!-- Responsiveness -->
+    <div class="form-group">
+        <div class="rating">
+            <input type="radio" id="star5_responsiveness" name="{{ form.responsiveness.name }}" value="5" required />
+            <label for="star5_responsiveness"></label>
+            <input type="radio" id="star4_responsiveness" name="{{ form.responsiveness.name }}" value="4" />
+            <label for="star4_responsiveness"></label>
+            <input type="radio" id="star3_responsiveness" name="{{ form.responsiveness.name }}" value="3" />
+            <label for="star3_responsiveness"></label>
+            <input type="radio" id="star2_responsiveness" name="{{ form.responsiveness.name }}" value="2" />
+            <label for="star2_responsiveness"></label>
+            <input type="radio" id="star1_responsiveness" name="{{ form.responsiveness.name }}" value="1" />
+            <label for="star1_responsiveness"></label>
+        </div>
+        <div class="invalid-feedback">Please rate the instructor's responsiveness.</div>
+    </div>
 
-                            <div class="form-group">
-                                <label for="{{ form.additional_comments.id_for_label }}"><b>Additional
-                                        Comments:</b></label>
-                                {{ form.additional_comments }}
-                                <div class="invalid-feedback">Please provide additional comments.</div>
-                            </div>
+    <div class="form-group">
+        <textarea name="{{ form.additional_comments.name }}" id="{{ form.additional_comments.auto_id }}" class="form-control rounded" placeholder="Additional Comments"></textarea>
+        <div class="invalid-feedback">Please provide additional comments.</div>
+    </div>
 
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="button text-center">
-                                        <button type="submit" class="theme-btn">Submit Feedback</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+    <div class="row">
+        <div class="col-12">
+            <div class="button text-center">
+                <button type="submit" class="theme-btn">Submit Feedback</button>
+            </div>
+        </div>
+    </div>
+</form>
+
 
 
                     </div>
@@ -270,27 +323,6 @@
     </section>
 
 
-    <!-- ========================= subscribe-section start ========================= -->
-    <section class="subscribe-section pt-70 pb-70 img-bg"
-        style="background-image: url('{% static 'assets/img/bg/common-bg.svg' %}')">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="section-title mb-30">
-                        <span class="text-white wow fadeInDown" data-wow-delay=".2s">Subscribe</span>
-                        <h2 class="text-white mb-40 wow fadeInUp" data-wow-delay=".4s">Subscribe Our Newsletter</h2>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6">
-                    <form action="#" class="subscribe-form wow fadeInRight" data-wow-delay=".4s">
-                        <input type="text" name="subs-email" id="subs-email" placeholder="Your Email">
-                        <button type="submit"><i class="lni lni-telegram-original"></i></button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ========================= subscribe-section end ========================= -->
 
     <!-- ========================= footer start ========================= -->
     <footer class="footer">
